Use broadcast where needed. Implement urgent mutex lock